# mootdx

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: django.yml
docs/: index.md  setup.md
mootdx/: __init__.py  __main__.py  affair.py  config.py  exceptions.py  logger.py  quotes.py  reader.py  server.py
mootdx/cache/: file.py
mootdx/contrib/: adjust.py  compat.py
mootdx/financial/: base.py  financial.py
mootdx/tools/: customize.py  reversion.py  tdx2csv.py
mootdx/utils/: __init__.py  adjust.py  factor.py  holiday.py  pandas_cache.py
tests/: requirements.txt  test_adjust.py  test_adjust2.py  test_xdxr.py
tests/cache/: test_file.py
tests/integration/: test_vipdoc.py
tests/quotes/: test_quotes_std.py  test_quotes_unit.py
tests/tools/: test_cli.py  test_reversion.py  test_tdx2csv.py
tests/utils/: test_holiday.py
