[tool.poetry]
name = "mootdx"
version = "0.11.7"
description = "通达信数据读取接口."
authors = ["bopo <ibopo@126.com>"]
readme = "README.md"
license = "MIT license"
homepage = "https://www.mootdx.com"
repository = "https://github.com/mootdx/mootdx"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]


[tool.poetry.scripts]
mootdx = "mootdx.__main__:entry"


[tool.poetry.dependencies]
# 核心依赖：仅设置最低版本，不再锁死小版本，避免 h11/httpcore/httpx 冲突
python = ">=3.9,<4.0"
httpx = ">=0.25,<1.0"
tenacity = ">=8.1,<9.0"
tdxpy = ">=0.2.5,<1.0"
tqdm = ">=4.60,<5.0"
prettytable = ">=3.5,<4.0"
click = ">=8.1,<9.0"
typing-extensions = ">=4.5,<5.0"
mini-racer = {version = ">=0.12,<1.0", optional = true}

[tool.poetry.group.test.dependencies]
pytest-cov = ">=4.0,<6.0"
freezegun = ">=1.2,<2.0"
pytest = ">=7.3,<9.0"

# 可选依赖组，对应 README 中 pip install 'mootdx[cli]' / 'mootdx[all]'
[tool.poetry.extras]
cli = ["click", "prettytable"]
all = ["click", "prettytable", "mini-racer"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
testpaths = "tests"
addopts = "-p no:warnings"
log_cli = 0
log_cli_level = "DEBUG"


[tool.commitizen]
tag_format = "v$version"
annotated_tag = true
changelog_file = "docs/history.md"
changelog_incremental = true
update_changelog_on_bump = true
version_provider = "poetry"
version_files = [
    "mootdx/__init__.py:__version__",
]


[tool.poe.tasks]
venv = "poetry install --sync"
lock = "poetry lock --no-update"

test = "poetry run pytest"
lint = "ruff check ./mootdx/*.py"

dist = "poetry build -v"
bump = "cz bump --yes -ch -cc --increment"

sync = "make sync"
pypi = "poetry publish --build --skip-existing"

#{MAJOR,MINOR,PATCH}
