[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mootdx_plus"
version = "0.12.0"
description = "通达信本地数据、行情与财务数据读取工具"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{name = "bopo", email = "ibopo@126.com"}]
keywords = ["tongdaxin", "tdx", "finance", "market-data", "pandas"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "click>=8.1,<9",
    "httpx>=0.27,<1",
    "pandas>=2.2,<4",
    "prettytable>=3.10,<4",
    "tdxpy>=0.2.7,<1",
    "tenacity>=8.2,<10",
    "tqdm>=4.66,<5",
]

[project.optional-dependencies]
# Kept for compatibility: CLI dependencies are now installed with the core package.
cli = []
holiday = ["mini-racer>=0.12,<1"]
all = ["mini-racer>=0.12,<1"]
test = ["pytest>=8.3,<9"]

[project.scripts]
mootdx = "mootdx.__main__:entry"

[project.urls]
Homepage = "https://github.com/mootdx/mootdx"
Documentation = "https://mootdx.readthedocs.io/"
Repository = "https://github.com/mootdx/mootdx"
Issues = "https://github.com/mootdx/mootdx/issues"

[tool.setuptools.packages.find]
include = ["mootdx*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers -m 'not network and not integration'"
markers = [
    "network: requires live public network services",
    "integration: exercises an external local data installation",
]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = ["mootdx/utils/demjson.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.coverage.run]
branch = true
source = ["mootdx"]

[tool.coverage.report]
show_missing = true
skip_covered = true
